# Head

# 0.2.0 - 2013 December 20th

- A lot of changes: no longer generates intermediate files, hopefully faster, but perhaps not
- Uses Ox instead of Nokogiri to parse worksheets, and does the parsing in one pass.
- Fixed a bug in the ruby version of vlookup and hlookup that would downcase strings passed as arguments in certain situations

# 0.1.23 - 2013 December 4th

- Implemented the RIGHT function in ruby

# 0.1.22 - 2013 December 4th

- Fixed a bug in = and != when comparing a string with a non string
- Implemented the LEN function in ruby
- Implemented the SUBSTITUTE function in ruby

# 0.1.21 - 2013 November 19th

- String joins can now be done on excel ranges
- Fixed bug in parsing of table references when they look like this: table.name[[column_name_inside_two_square_brackets]]
- Fixed OFFSET to work with sheet as well as cell references
- Implemented ISNUMBER function
- Fixed bug in OFFSET replacement
- Can now parse structured table references like this: G.40.levels.efficiency[[Description]:[Description]]
- Fixed StringIO#lines is deprecated warning.

# 0.1.20 - 2013 August 28th

- Fix compiler warnings relating to comparing a string literal

# 0.1.19 - 2013 August 24th

- Implemented the RANK() function

# 0.1.18 - 2013 August 23rd

- Implemented the CONCATENATE() function

# 0.1.17 - 2013 August 22nd

- Changed the way that shared targets are converted into a hash to avoid a stack overflow when there are very large numbers of shared formulae in a worksheet.

# 0.1.16 - 2013 August 21st

- Now returns the correct answer when MMULT() is used outside of an array formula

# 0.1.15 - 2013 August 21st

- Now translates formulae that peform arithmetic on ranges, such as SUMPRODUCT(A1:A10, 1/B1:B10)

# 0.1.14 - 2013 August 20th

- Implementing the MMULT function in ruby and C (note only works when entered as an array formula)

# 0.1.13 - 2013 August 19th

- Implemented LOG function in ruby and C
- Now converts the POWER(10,2) function as well as 10^2
